--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ferris-says="0.2"
+hyper = "0.12.35"
+tokio-core = "0.1.17"
+futures = "0.1.29"
